Fix header image flicker
Use Astro's `layout="fixed"`

Closes Fix flicker on AdaptiveImage
Fixes #31

--- a/packages/markwiemer.com/public/styles.css
+++ b/packages/markwiemer.com/public/styles.css
@@ -18,7 +18,7 @@
   --link-visited-light: rgb(107, 2, 107);
   --nav-bg-dark: var(--body-bg-dark);
   --nav-bg-light: var(--body-bg-light);
-  /* should be divisible by 1.1, 1.25, 1.5, 1.75, 2, 2.5, 3, 4, and 5 */
+  /* ideally is divisible by 1.1, 1.25, 1.5, 1.75, 2, 2.5, 3, 4, and 5 */
   /* these are the zoom levels of Microsoft Edge and likely other browsers */
   /* should also be close to 150px of course */
   /* 165px is my favorite candidate */
@@ -35,9 +35,11 @@
   /** reference values */
   /* not currently used directly due to technical issues */
   /* todo find better CSS system */
-  /* [320, 640) px */
+  /* [320, 480] px */
+  --breakpoint-very-thin: 480px;
+  /* (480, 640] px */
   --breakpoint-thin: 640px;
-  /* [var(--breakpoint-thin), 1280) px */
+  /* (640, 1280] px */
   --breakpoint-medium: 1280px;
 }
 
@@ -93,6 +95,9 @@ nav {
   }
 }
 
+/* button to open the nav */
+/* todo rmove rounded border on right side while expanded */
+/* this would mirror the existing appearance on the left while collapsed */
 #openNav {
   width: var(--width-button-nav);
   border: 1px solid var(--text-primary-light);
@@ -251,17 +256,6 @@ div.headerImages {
   flex-wrap: wrap;
   justify-content: center;
   margin-bottom: 1em;
-}
-
-img.headerImage {
-  height: 12em;
-  width: 12em;
-
-  /* breakpoint-very-thin */
-  @media (max-width: 480px) {
-    height: 7em;
-    width: 7em;
-  }
 }
 
 /* Apply to divs to get center margin */
